--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import 'variables.scss';
 
 @import 'pages/homepage.scss';
+@import 'pages/shop.scss';
 
 @import 'sections/navigation.scss';
 @import 'sections/cart.scss';
