--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,3 +25,17 @@ body {
     max-width: 930px;
   }
 }
+
+.buy__btn {
+  background-color: $regularLinkColor;
+  border: 0;
+  border-radius: 20px;
+  color: #fff;
+  padding: 10px 15px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color .2s ease-in-out;
+  &:hover {
+    background-color: darken($regularLinkColor, 5%);
+  }
+}
