--- a/src/styles/sections/cart.scss
+++ b/src/styles/sections/cart.scss
@@ -1,9 +1,127 @@
 .cart {
-  &__btn {
+  position: fixed;
+  right: -500px;
+  top: 0;
+  bottom: 0;
+  background-color: #fff;
+  padding: 30px;
+  min-width: 500px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transition: right .5s ease-in-out;
+  z-index: 2;
+  overflow-y: auto;
+  &.active {
+    right: 0;
+  }
+  &__open {
     background-color: transparent;
     border: 0;
+    position: relative;
+    cursor: pointer;
   }
   &__icon {
 
+  }
+  &__quantity {
+    color: #fff;
+    position: absolute;
+    right: 0;
+    top: -5px;
+    background-color: gray;
+    border-radius: 50%;
+    width: 17px;
+    height: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  &__title {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 500;
+  }
+  &__close {
+    border: 0;
+    background-color: transparent;
+    padding: 5px;
+    cursor: pointer;
+    img {
+      width: 30px;
+      display: block;
+    }
+  }
+
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid gray;
+  }
+  &__item-img {
+    max-width: 200px;
+  }
+  &__item-title {
+    margin: 0 0 10px;
+    font-weight: 500;
+    font-size: 1.5rem;
+  }
+  &__item-price {
+    margin: 0 0 30px;
+    color: gray;
+    margin-bottom: 10px;
+  }
+  &__item-counter {
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+  }
+  &__item-quantity {
+    max-width: 60px;
+    text-align: center;
+  }
+  &__item-increment,
+  &__item-decrement {
+    border: none;
+    background-color: transparent;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 5px;
+  }
+
+  &__footer {
+    margin-top: 30px;
+    text-align: center;
+  }
+  &__total {
+    text-align-last: left;
+    margin: 0 0 30px;
+    font-weight: 500;
+    font-size: 1.5rem;
+  }
+  &__checkout {
+    background-color: $regularLinkColor;
+    border: 0;
+    color: #fff;
+    font-size: 1.8rem;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 15px;
+    transition: background-color 0.2s ease-in-out;
+    &:hover {
+      background-color: darken($regularLinkColor, 5%);
+    }
   }
 }
