--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,3 +41,16 @@ body {
   }
 }
 
+.error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 200px);
+  &__text {
+    text-align: center;
+    font-size: 3.5rem;
+    font-weight: 500;
+    margin: 0;
+    max-width: 750px;
+  }
+}
